Add new string strategies and reorganize test files
- Implemented ASCII, Unicode, Email, URL, and Regex string strategies
- Created collection infrastructure (ArrayGen, ListGen, DictionaryGen)
- Moved all test files from tests folder to src folder per coding guidelines
- Added comprehensive unit tests for new string generators
- All 78 tests passing successfully

--- a/Delphi.Source/tests/Hypothesis4D.UnitTests.dproj
+++ b/Delphi.Source/tests/Hypothesis4D.UnitTests.dproj
@@ -89,7 +89,7 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="Hypothesis.Core.Tests.pas"/>
+        <DCCReference Include="..\src\Hypothesis.Core.Tests.pas"/>
         <DCCReference Include="..\src\Hypothesis.Generators.Factory.pas"/>
         <DCCReference Include="..\src\Hypothesis.Core.pas"/>
         <DCCReference Include="..\src\Hypothesis.Attributes.pas"/>
@@ -100,12 +100,14 @@
         <DCCReference Include="..\src\Hypothesis.Generators.Interfaces.pas"/>
         <DCCReference Include="..\examples\Hypothesis.Examples.Tests.pas"/>
         <DCCReference Include="..\examples\Hypothesis.Examples.pas"/>
-        <DCCReference Include="Hypothesis.Generators.Booleans.Tests.pas"/>
+        <DCCReference Include="..\src\Hypothesis.Generators.Booleans.Tests.pas"/>
         <DCCReference Include="..\src\Hypothesis.Generators.Booleans.pas"/>
         <DCCReference Include="..\src\Hypothesis.Generators.DateTimes.pas"/>
         <DCCReference Include="..\src\Hypothesis.Generators.Floats.pas"/>
-        <DCCReference Include="Hypothesis.Generators.DateTimes.Tests.pas"/>
-        <DCCReference Include="Hypothesis.Generators.Floats.Tests.pas"/>
+        <DCCReference Include="..\src\Hypothesis.Generators.DateTimes.Tests.pas"/>
+        <DCCReference Include="..\src\Hypothesis.Generators.Floats.Tests.pas"/>
+        <DCCReference Include="..\src\Hypothesis.Generators.Collections.pas"/>
+        <DCCReference Include="..\src\Hypothesis.Generators.Strings.Tests.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
