Add collection helper methods and generator-based Run overload
Implemented 15 convenience helper methods in THypothesis class to simplify
collection generation (arrays, lists, dictionaries). Added new Run overload
that accepts pre-created generators, bypassing attribute inspection.

This resolves the limitation that Delphi attributes cannot accept nested
generators due to compile-time constant requirements. Users can now easily
generate collections using methods like ArrayOfIntegers, ListOfStrings, and
DictIntegerToString with the generator-based Run approach.

All 94 tests pass successfully, including 17 new collection tests.

--- a/Delphi.Source/tests/Hypothesis4D.UnitTests.dproj
+++ b/Delphi.Source/tests/Hypothesis4D.UnitTests.dproj
@@ -108,6 +108,7 @@
         <DCCReference Include="..\src\Hypothesis.Generators.Floats.Tests.pas"/>
         <DCCReference Include="..\src\Hypothesis.Generators.Collections.pas"/>
         <DCCReference Include="..\src\Hypothesis.Generators.Strings.Tests.pas"/>
+        <DCCReference Include="..\src\Hypothesis.Generators.Collections.Tests.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
